[DDW-865]: Fix alignment issue of total amount on address details page

--- a/source/features/transactions/components/TransactionInfo.scss
+++ b/source/features/transactions/components/TransactionInfo.scss
@@ -150,10 +150,6 @@
         flex-direction: column;
         margin-bottom: 5px;
 
-        @media (max-width: 992px) {
-          align-items: flex-start;
-        }
-
         &:last-child {
           margin-bottom: 0;
         }
